fixed sign up not showing up

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -294,7 +294,7 @@
   font-size: 12px;
   color: gray;
   display: inline-block;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 .main-screen-container .main-wrapper .middle-panel .messages-wrapper .tile .right .content-wrapper {
   color: #e9e9e9;
