--- a/styles/sass/_main-screen.scss
+++ b/styles/sass/_main-screen.scss
@@ -87,7 +87,7 @@
                 font-size: 12px;
                 color: gray;
                 display: inline-block;
-                margin-left: 10px;
+                margin-left: 5px;
               }
             }
 
